[build-system]
# Include Cython in build requirements for direct cythonization
requires = ["setuptools>=63.0.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Enable dynamic version for setuptools to find version in pyomo/version/info.py
dynamic = {version = {attr = "pyomo.version.info.__version__"}}
include-package-data = true
license-files = ["LICENSE.md"]

[tool.setuptools.packages]
find = {}

[project]
name = "pyomo"
dynamic = ["version"]
description = "Pyomo: Python Optimization Modeling Objects"
readme = "README.md"
license = {text = "BSD"}
requires-python = ">=3.9"
maintainers = [
    {name = "Pyomo Developer Team", email = "wg-pyomo@sandia.gov"}
]
keywords = ["optimization"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = ["ply"]

[project.urls]
Homepage = "http://pyomo.org"
Documentation = "https://pyomo.readthedocs.io/"
Source = "https://github.com/Pyomo/pyomo"

[project.optional-dependencies]
tests = [
    'coverage',
    'parameterized',
    'pybind11',
    'pytest',
    'pytest-parallel',
]
docs = [
    'Sphinx>4,!=8.2.0',
    'sphinx-copybutton',
    'sphinx_rtd_theme>0.5',
    'sphinxcontrib-jsmath',
    'sphinxcontrib-napoleon',
    'sphinx-toolbox>=2.16.0',
    'sphinx-jinja2-compat>=0.1.1',
    'numpy',  # Needed by autodoc for pynumero
    'scipy',  # Needed by autodoc for pynumero
]
optional = [
    'dill',  # No direct use, but improves lambda pickle
    'ipython',  # contrib.viewer
    'linear-tree',  # contrib.piecewise
    # Note: matplotlib 3.6.1 has bug #24127, which breaks
    # seaborn's histplot (triggering parmest failures)
    # Note: minimum version from community_detection use of
    # matplotlib.pyplot.get_cmap()
    'matplotlib>=3.6.0,!=3.6.1',
    # network, incidence_analysis, community_detection
    # Note: networkx 3.2 is Python>-3.9, but there is a broken
    # 3.2 package on conda-forge that will get implicitly
    # installed on python 3.8
    'networkx<3.2; python_version<"3.9"',
    'networkx; python_version>="3.9"',
    'numpy',
    'openpyxl',  # dataportals
    #'pathos',   # requested for #963, but PR currently closed
    'pint',  # units
    'plotly',  # incidence_analysis
    'python-louvain',  # community_detection
    'pyyaml',  # core
    # qtconsole also requires a supported Qt version (PyQt5 or PySide6).
    # Because those are environment specific, we have left that out here.
    'qtconsole',  # contrib.viewer
    'scipy',
    'sympy',  # differentiation
    'xlrd',  # dataportals
    'z3-solver',  # community_detection
    #
    # subprocess output is merged more reliably if
    # 'PeekNamedPipe' is available from pywin32
    'pywin32; platform_system=="Windows"',
    #
    # The following optional dependencies are difficult to
    # install on PyPy (binary wheels are not available), so we
    # will only "require" them on other (CPython) platforms:
    'casadi; implementation_name!="pypy"',  # dae
    'numdifftools; implementation_name!="pypy"',  # pynumero
    'pandas; implementation_name!="pypy"',
    'seaborn; implementation_name!="pypy"',  # parmest.graphics
]

[project.scripts]
pyomo = "pyomo.scripting.pyomo_main:main_console_script"

[project.entry-points."pyomo.command"]
"pyomo.help" = "pyomo.scripting.driver_help"
"pyomo.viewer" = "pyomo.contrib.viewer.pyomo_viewer"

[tool.setuptools.package-data]
"pyomo.contrib.ampl_function_demo" = ["src/*"]
"pyomo.contrib.appsi.cmodel" = ["src/*"]
"pyomo.contrib.mcpp" = ["*.cpp"]
"pyomo.contrib.pynumero" = ["src/*", "src/tests/*"]
"pyomo.contrib.viewer" = ["*.ui"]
"pyomo.contrib.simplification.ginac" = ["src/*.cpp", "src/*.hpp"]

[tool.pytest.ini_options]
filterwarnings = "ignore::RuntimeWarning"
junit_family = "xunit2"
markers = [
    "default: mark a test that should always run by default",
    "expensive: marks tests as expensive",
    "mpi: marks tests that require MPI",
    "neos: marks tests that require NEOS server connections",
    "importtest: marks tests that checks for warnings when importing modules",
    "book: marks tests from the Pyomo book",
    "performance: marks performance tests",
    "long: marks long performance tests",
    "short: marks short performance tests",
    "devel: marks developer-created performance tests",
    "nl: marks nl tests",
    "lp: marks lp tests",
    "gams: marks gams tests",
    "bar: marks bar tests",
    "builders: tests that should be run when testing custom (extension) builders",
    "solver: mark test to run the named solver"
]
